--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -103,5 +103,22 @@
 <path clip-rule="evenodd" d="M10.8,22.8V26h5v2h-5h-3h-5v-2h5v-3.2C3.4,22.2,0,18.7,0,14.4v-3  c0-0.1,0-0.3,0-0.4h2.8c0,0.3-0.1,0.6-0.1,0.9V14c0,3.3,2.9,6,6.5,6c3.6,0,6.5-2.7,6.5-6v-2.1c0-0.3,0-0.6-0.1-0.9h2.8  c0,0.1,0,0.3,0,0.4v3C18.6,18.7,15.2,22.2,10.8,22.8z M9.3,18c-2.5,0-4.5-2-4.5-4.5v-9C4.8,2,6.8,0,9.3,0s4.5,2,4.5,4.5v9  C13.8,16,11.8,18,9.3,18z" fill="#0D0D0D" fill-rule="evenodd"/>
 </symbol>
 
+<symbol id="icon-googlescholar" viewBox="0 0 40 40">
+<title>googlescholar</title>
+<path d="M19.3,17.9c-0.7-0.2-1.6-0.9-2-1.5c-1.3-1.7-2-4.5-1.7-6.4c0.2-1.6,0.9-2.6,2-3.2c0.6-0.3,0.7-0.3,1.6-0.3s1.1,0,1.6,0.3
+	c1.6,0.8,2.8,2.9,3.3,5.6c0.2,1.2,0.2,2.6-0.2,3.5c-0.3,0.8-0.9,1.5-1.7,1.9C21.3,18.1,20.1,18.2,19.3,17.9z M19,34.6
+	c-1.7-0.3-3.2-0.9-4.2-1.8c-1.5-1.4-1.9-3.7-0.7-5.4c1-1.5,3.3-2.5,6.4-2.6l1.5-0.1l1.1,0.8c2.6,1.9,3.6,3.5,3.3,5.4
+	c-0.3,1.8-1.6,3-3.8,3.5C21.8,34.7,19.8,34.8,19,34.6z M20.1,36.4c3.4-0.3,6.2-1.7,7.6-3.8c1.7-2.3,1.8-5,0.5-7.3
+	c-0.5-0.8-1.1-1.4-2.5-2.5c-1.5-1.2-2.1-1.8-2.3-2.3c-0.4-1-0.1-1.5,1.8-3.4c1.2-1.2,1.6-1.7,1.9-2.1c0.5-1.1,0.7-1.7,0.7-3
+	c0-1.2-0.2-2-0.6-2.9C27.1,8.8,27,8.6,27,8.6c0.5-0.4,5-3.9,5-3.9c0.2,0,0,1.4-0.3,2.2c-0.3,0.5-0.3,0.6-0.3,3.6
+	c-0.1,5-0.1,7.6,0.1,8.1c0.4,1.3,1.8,1.5,2.3,0.3c0.2-0.5,0.2-0.6,0.2-3.1c0-1.8-0.1-3.1-0.2-4.1c-0.1-1.2-0.2-1.6-0.1-2.6
+	c0.1-1.3,0.1-1.5-0.3-2.6C33.1,5.9,33,5.5,33,5c0-0.9,0.2-1.4,1.1-2c0.4-0.3,0.7-0.5,0.7-0.6c0,0-4.2-0.1-9.4-0.1H16l-5.6,4.8
+	L4.9,12h3.5h3.5l0.1,1c0.1,1.9,0.6,3,1.9,4.2c1.4,1.4,2.7,1.9,4.8,1.9h1.2l-0.1,0.4c-0.4,1.1-0.2,2.1,0.5,3.2
+	c0.2,0.4,0.4,0.7,0.4,0.7s-0.2,0.1-0.5,0.1c-0.8,0-3.2,0.4-4.3,0.7c-3.7,1-5.9,3.3-5.9,6.2c0,2.6,1.9,4.7,5.1,5.5
+	C16.8,36.5,18.3,36.6,20.1,36.4z M3.3,39.9c-1.5-0.3-2.7-1.4-3.1-2.8C0,36.4,0,36,0,20S0,3.6,0.2,3c0.4-1.3,1.2-2.2,2.5-2.7L3.3,0
+	h16.3c18,0,16.9-0.1,18.1,0.6c0.7,0.4,1.2,1,1.6,1.8l0.3,0.7v16.6c0,16.3,0,16.6-0.2,17.3c-0.4,1.3-1.3,2.3-2.6,2.8
+	C36.3,40,35.6,40,20.1,40C7.8,40,3.7,40,3.3,39.9z" />
+</symbol>
+
 </defs>
 </svg>
