custom color codes

--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,10 +1,12 @@
 $fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
-$alpha: #666
+// $alpha: #666
+$alpha: #227a71
 $beta: #222
 $gama: #aaa
-$delta: #4b0082
+// $delta: #4b0082
+$delta: #40e0d0
 $epsilon: #ededed
 
 $mobile: "only screen and (max-width: 400px)"
