--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,3 +1,25 @@
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" />
+<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="{{ site.url }}/assets/images/icon_turq/icon_turq.png" sizes="128x128" />
+<meta name="application-name" content="&nbsp;"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content="mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+
+<!--
 <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-114x114.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/assets/images/favicon/apple-touch-icon-72x72.png" />
@@ -18,3 +40,4 @@
 <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
 <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
 <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+-->
