--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,4 +1,5 @@
 <div class="item {% if post.star %}star{% endif %}">
+    <a href="{{ post.url }}" ><img src="{{ post.thumbnail }}" />
     <a class="url" href="{{ site.url }}{{ post.url }}">
         <aside class="date"><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
         <h3 class="title">{{ post.title }}</h3>
