--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -32,6 +32,11 @@
         text-decoration: none
         display: inline-block
 
+    > .image-thumb
+        display: block
+        margin-left: auto
+        margin-right: auto
+
     // general style
     > h2,
     > h3,
