--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,7 +1,9 @@
 <div class="item {% if post.star %}star{% endif %}">
-    <a class="image-thumb" href="{% if post.externalLink %}{{ post.externalLink }}{% else %}{{ site.url }}{{ post.url }}{% endif %}" ><img src="{{ post.thumbnail }}" width="200" />
+    {% if post.thumbnail %}
+        <a class="image-thumb" href="{% if post.externalLink %}{{ post.externalLink }}{% else %}{{ site.url }}{{ post.url }}{% endif %}" ><img src="{{ post.thumbnail }}" width="200" />
+    {% endif %}
     <a class="url" href="{% if post.externalLink %}{{ post.externalLink }}{% else %}{{ site.url }}{{ post.url }}{% endif %}">
-        <aside class="date"><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
+        <aside class="date"><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%d %b %Y" }}</time></aside>
         <h3 class="title">{{ post.title }}</h3>
     </a>
 </div>
