--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -127,7 +127,67 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: 560px
+	max-width: 750px
 
 .wrapper-large
-	max-width: 810px
+	max-width: 900px
+
+.floatedtext
+	text-align: justify
+	text-indent: 2em
+
+.image-float-left
+	float: left
+	margin: 0 5px 20px 0
+
+.image-center
+	display: block
+	margin-left: auto
+	margin-right: auto
+
+// JUPYTER NOTEBOOK SHIT
+.prompt
+	font-family: monospace
+	color: black
+	font-size: 12px
+
+// .prompt
+//   min-width: 14ex
+//   padding: 0.4em
+//   margin: 0px
+//   font-family: monospace
+//   text-align: right
+//   line-height: 1.21429em
+//   -webkit-touch-callout: none
+//   -webkit-user-select: none
+//   -khtml-user-select: none
+//   -moz-user-select: none
+//   -ms-user-select: none
+//   user-select: none
+//   cursor: default
+
+
+// .input_area div.highlighter-rouge
+//   background-color: #f7f7f7
+//
+// .output_stream, .output_data_text, .output_traceback_line {
+//   margin-left: 2% !important;
+//   border: none !important;
+//   border-radius: 4px !important;
+//   background-color: #fafafa !important;
+//   box-shadow: none !important;
+// }
+//
+// .output_stream:before, .output_data_text:before, .output_traceback_line:before{
+//   content: none !important;
+// }
+
+// .float-left
+//   float: left
+//   margin: 0 20px 20px 0
+//   width: 150px
+//   height: 150px
+//
+// .floatedtext
+//   text-align: justify
+//   text-indent: 2em
