--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,6 +14,14 @@
             {% endif %}
         {% endif %}
 
+        {% if site.stuff == true %}
+            {% if page.title != "Stuff" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/stuff">Stuff</a>
+                </li>
+            {% endif %}
+        {% endif %}
+
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
