--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,24 +5,12 @@ layout: compress
 <html lang="en">
 <head>
 
+    <meta name="google-site-verification" content="your verification string">
+
     {% if site.analytics-google %}
         {% include analytics-google.html %}
     {% endif %}
 
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- seo -%}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-    {%- feed_meta -%}
-    {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-    {%- endif -%}
-    <meta name="google-site-verification" content="SMM9f1F5tgoavqXbA46Lf6pPKmdPzZPOgyF1SdLoKz8" />
-
-
-    
     <meta charset="utf-8">
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta name=viewport content="width=device-width, initial-scale=1">
