--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <html lang="en">
 <head>
 
-    <meta name="google-site-verification" content="your verification string">
+    <meta name="google-site-verification" content="SMM9f1F5tgoavqXbA46Lf6pPKmdPzZPOgyF1SdLoKz8">
 
     {% if site.analytics-google %}
         {% include analytics-google.html %}
